[package]
name = "rscuda"
version = "0.1.0"
edition = "2024"

[dependencies]
kernels = { path = "kernels" }
cust = { git = "https://github.com/rust-gpu/rust-cuda", rev = "c83adae4f4397e556b4667af0d258221c135033d" }

[build-dependencies]
cuda_builder = { git = "https://github.com/rust-gpu/rust-cuda", rev = "c83adae4f4397e556b4667af0d258221c135033d", features = ["rustc_codegen_nvvm"] }
